clusters/infra/dev/vanitydomain/vanitydomain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanitydomain-ingress
  namespace: vanitydomain
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.dev.1a4.co
    secretName: vanitydomain-tls
  ingressClassName: nginx
  rules:
    - host: www.dev.1a4.co
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vanitydomain
                port:
                  number: 80
